# medicare-synth

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  LESSONS.md  README.md  ROADMAP.md  SPEC.md  pyproject.toml  pyrightconfig.json
.agents/skills/medicare-domain-reviewer/: SKILL.md
.agents/skills/medicare-evidence-specifier/: SKILL.md
.agents/skills/medicare-slice-builder/: SKILL.md
.agents/skills/medicare-synth-orchestrator/: SKILL.md
data/manifests/: cms_2021_syn_claims_manifest.json
data/rkb_snapshots/: rkb-v1.0-20211231.json
docs/: medicare-synth-project-proposal_20260720.md
docs/harness/medicare-synth/: team-spec.md
examples/: python_reference.py  sql_reference.sql
reports/: auto_workflow_execution.json  auto_workflow_execution.md  workflow_report.json
scripts/: autonomous_workflow.py
src/medicare_synth/: __init__.py  audit.py  catalog.py  cli.py  diff.py  evidence.py  expansion.py  manifest.py  models.py  normalizer.py  profile.py  release.py  scenarios.py  validation.py  workflow.py
tests/: test_audit.py  test_autonomous_workflow.py  test_catalog.py  test_cli.py  test_diff.py  test_dme.py  test_evidence.py  test_expansion.py  test_hha.py  test_hospice.py  test_inpatient.py  test_manifest.py  test_mbsf.py  test_mbsf_base.py  test_mbsf_c.py  test_mbsf_cu.py  test_mbsf_d.py  test_mbsf_ffs.py  test_mbsf_ndi.py  test_mbsf_oc.py  test_mbsf_pde_util.py  test_mbsf_ra.py  test_models.py  test_normalizer.py  test_pde.py  test_profile.py  test_release.py  test_scenarios.py  test_snf.py  test_validation.py
