[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[project]
name = "medicare-synth"
version = "0.1.0"
description = "Provenance-backed contemporary Medicare synthetic data and research fixtures"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "polars>=1.42.1",
    "pyarrow>=25.0.0",
    "pydantic>=2.13.4",
]

[project.scripts]
medicare-synth = "medicare_synth.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

